Python files have been updated with initial structure and the file names of java has been modfied and updated index file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="java.html" target="_blank">Java Programs</a></li>
         <li><a href="SeleniumP.html" target="_blank">Selenium Scenarios</a></li>
         <li><a href="RestAPIP.html" target="_blank">Rest API Scenarios</a></li>
-        <li><a href="PythonP.html" target="_blank">Python Programs</a></li></ul>
+        <li><a href="python.html" target="_blank">Python Programs</a></li></ul>
     </nav>
    </div>
    
