--- a/java.html
+++ b/java.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WLT-Java</title>
+    <title>WCT-Java</title>
     <link rel="stylesheet" href="java.css">
 </head>
 <body>
